[api] return labels and categories (#24)
