# api/http/swagger.json
@@ -343,6 +343,77 @@
                 }
             }
         },
+        "/labels": {
+            "get": {
+                "description": "Search addresses by label name or category",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "label"
+                ],
+                "summary": "address labels",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "filter labels by its name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "description": "filter by categories",
+                        "name": "interface",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 10000,
+                        "type": "integer",
+                        "default": 3,
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/filter.LabelsRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/labels/categories": {
+            "get": {
+                "description": "Returns all possible label categories",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "label"
+                ],
+                "summary": "address label categories",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/http.GetLabelCategoriesRes"
+                        }
+                    }
+                }
+            }
+        },
         "/messages": {
             "get": {
                 "description": "Returns filtered messages",
@@ -1169,7 +1240,7 @@
                     }
                 },
                 "balance": {
-                    "type": "string"
+                    "$ref": "#/definitions/bunbig.Int"
                 },
                 "block_seq_no": {
                     "type": "integer"
@@ -1234,6 +1305,9 @@
                 "is_active": {
                     "type": "boolean"
                 },
+                "jetton_balance": {
+                    "type": "string"
+                },
                 "label": {
                     "$ref": "#/definitions/core.AddressLabel"
                 },
@@ -1290,6 +1364,12 @@
         "core.AddressLabel": {
             "type": "object",
             "properties": {
+                "address": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
                 "categories": {
                     "type": "array",
                     "items": {
@@ -1684,6 +1764,20 @@
                 }
             }
         },
+        "filter.LabelsRes": {
+            "type": "object",
+            "properties": {
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/core.AddressLabel"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "filter.MessagesRes": {
             "type": "object",
             "properties": {
@@ -1790,6 +1884,20 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/core.ContractInterface"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "http.GetLabelCategoriesRes": {
+            "type": "object",
+            "properties": {
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
                     }
                 },
                 "total": {
